--- a/BunnyCart/BunnyCart.csproj
+++ b/BunnyCart/BunnyCart.csproj
@@ -24,10 +24,14 @@
 	  <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="119.0.6045.10500" />
 	  <PackageReference Include="Selenium.WebDriver.MSEdgeDriver" Version="119.0.2151.42" />
 	  <PackageReference Include="SeleniumExtras.WaitHelpers" Version="1.0.2" />
+	  <PackageReference Include="Serilog" Version="3.1.1" />
+	  <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0" />
+	  <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="ExtentReports\" />
+    <Folder Include="Logs\" />
     <Folder Include="TestData\" />
   </ItemGroup>
 
